add reserve rooms api
