# controllers/guest.go
@@ -1,7 +1,10 @@
 package controllers
 
 import (
+	"crypto/md5"
+	"easybook/codecs"
 	"easybook/models"
+	"encoding/hex"
 	"encoding/json"
 	"errors"
 	"strconv"
@@ -27,23 +30,51 @@ func (c *GuestController) URLMapping() {
 // Post ...
 // @Title Post
 // @Description create Guest
-// @Param	body		body 	models.Guest	true		"body for Guest content"
-// @Success 201 {int} models.Guest
+// @Param	body		body 	codecs.GuestPostRequest	true		"body for Guest content"
+// @Success 201 {int} codecs.GuestPostResponse
 // @Failure 403 body is empty
 // @router / [post]
 func (c *GuestController) Post() {
-	var v models.Guest
-	if err := json.Unmarshal(c.Ctx.Input.RequestBody, &v); err == nil {
-		if _, err := models.AddGuest(&v); err == nil {
-			c.Ctx.Output.SetStatus(201)
-			c.Data["json"] = v
-		} else {
-			c.Data["json"] = err.Error()
-		}
-	} else {
-		c.Data["json"] = err.Error()
+	res := codecs.GuestPostResponse{}
+	res.SetCode(codecs.Fail)
+
+	defer func() {
+		c.Data["json"] = res
+		c.ServeJSON()
+	}()
+
+	var req codecs.GuestPostRequest
+	if json.Unmarshal(c.Ctx.Input.RequestBody, &req) != nil {
+		c.Ctx.Output.SetStatus(400)
+		res.SetCode(codecs.InvalidParams)
+		return
 	}
-	c.ServeJSON()
+
+	guest := &models.Guest{
+		Email:     req.Email,
+		FirstName: req.FirstName,
+		LastName:  req.LastName,
+		Phone:     req.Phone,
+		Address:   req.Address,
+		Detail:    req.Detail,
+		Role:      req.Role,
+	}
+
+	if req.Password != "" && req.Password == req.ConfirmedPassword {
+		hash := md5.Sum([]byte(req.Password))
+		guest.Password = hex.EncodeToString(hash[:])
+	}
+
+	_, err := models.AddGuest(guest)
+	if err != nil {
+		c.Ctx.Output.SetStatus(500)
+		res.SetCode(codecs.FailedCreate)
+		return
+	}
+
+	c.Ctx.Output.SetStatus(201)
+	res.SetCode(codecs.Success)
+	res.Guest = guest
 }
 
 // GetOne ...
